--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <nav id="navbar">
+    <div class="logo">
+        Moje <span class="text-primary">firma</span>
+    </div>
+    <ul>
+        <li><a href="#home">Úvod</a></li>
+        <li><a href="#about">O nás</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+    </ul>
+</nav>
     <h1>FC Barcelona</h1>
     <p><img alt="" src="https://icon2.cleanpng.com/lnd/20241224/fy/4aaaed54bf3d7a0b628ed9b58d67b1.webp"> </p>
     <p><a href="https://www.fcbarcelona.com/en/" target="_blank" rel="noopener noreferrer">Odkaz na hlavní stránky
@@ -37,6 +47,7 @@
         <a href="https://cs.wikipedia.org/wiki/Lionel_Messi" target="_blank" rel="noopener noreferrer"><img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg/500px-Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg"
                 alt=""></a>
+                
             
 </body>
 </html>
