Konec hodiny k odevzdání

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>FC Barcelona info</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <h1>FC Barcelona</h1>
+    <div class="container">
+    <nav id="navbar">
+    <div class="logo">
+         <span class="text-primary">FC Barcelona</span>
+    </div>
+    <ul>
+        <li><a href="#home">Úvod</a></li>
+        <li><a href="#about">O nás</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+    </ul>
+    </div>
+    <div class="idecko">
+</nav>
+    <h1>Logo Barcelony:</h1>
     <p><img alt="" src="https://icon2.cleanpng.com/lnd/20241224/fy/4aaaed54bf3d7a0b628ed9b58d67b1.webp"> </p>
     <p><a href="https://www.fcbarcelona.com/en/" target="_blank" rel="noopener noreferrer">Odkaz na hlavní stránky
             klubu</a></p>
@@ -23,7 +37,6 @@
     <p>•14x</p>
     <h3>Top 5 nejdražších přestupů</h3>
     <ul>
-
         <li>1)Philippe Coutinho (160 miliónů EUR) </li>
         <li>2)Ousmane Dembelé (145 miliónů EUR) </li>
         <li>3)Antoine Griezmann (120 miliónů EUR) </li>
@@ -37,7 +50,6 @@
         <a href="https://cs.wikipedia.org/wiki/Lionel_Messi" target="_blank" rel="noopener noreferrer"><img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg/500px-Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg"
                 alt=""></a>
-                
-            
+    </div>
 </body>
 </html>
