Uvod o nas a kontakt done skoro

--- a/index.html
+++ b/index.html
@@ -1,55 +1,85 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC Barcelona info</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="container">
+    <!-- 🔹 Navigace -->
+     <Header>
     <nav id="navbar">
-    <div class="logo">
-         <span class="text-primary">FC Barcelona</span>
+        <div class="logo">
+            FC <span class="text-primary">Barcelona</span>
+        </div>
+        <ul>
+            <li><a href="index.html">Úvod</a></li>
+            <li><a href="about.html">O nás</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
+</Header>
+    <!-- 🔹 Hlavní obsah -->
+     <main>
+    <div class="container">
+        <div class="obsah">
+            <h1>Logo Barcelony:</h1>
+            <p>
+                <img alt="Logo Barcelony" src="https://icon2.cleanpng.com/lnd/20241224/fy/4aaaed54bf3d7a0b628ed9b58d67b1.webp">
+            </p>
+
+            <p>
+                <a href="https://www.fcbarcelona.com/en/" target="_blank" rel="noopener noreferrer">
+                    Odkaz na hlavní stránky klubu
+                </a>
+            </p>
+
+            <h3>• Počet vyhraných domácích titulů</h3>
+            <p>• 27x</p>
+
+            <h3>• Počet vyhraných Lig mistrů</h3>
+            <p>• 5x</p>
+
+            <h3>• Počet vyhraných Španělských pohárů (Copa del Rey)</h3>
+            <p>• 31x</p>
+
+            <h3>• Počet vyhraných Španělských Superpohárů (Supercopa de España)</h3>
+            <p>• 14x</p>
+
+            <h3>Top 5 nejdražších přestupů</h3>
+            <ul>
+                <li>1) Philippe Coutinho (160 miliónů EUR)</li>
+                <li>2) Ousmane Dembelé (145 miliónů EUR)</li>
+                <li>3) Antoine Griezmann (120 miliónů EUR)</li>
+                <li>4) Neymar JR (88 miliónů EUR)</li>
+                <li>5) Luis Suaréz (82 miliónů EUR)</li>
+            </ul>
+
+            <h3>• Počet vyhraných Evropských Superpohárů (UEFA Super Cup)</h3>
+            <p>• 5x</p>
+
+            <h3>• Nejlepší střelec v historii klubu</h3>
+
+            <div class="messi-section">
+                <a href="https://cs.wikipedia.org/wiki/Lionel_Messi" target="_blank" rel="noopener noreferrer">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg/500px-Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg" alt="Lionel Messi">
+                </a>
+                <p>• Lionel Messi (672 gólů za 17 let v Barceloně)</p>
+            </div>
+        </div>
     </div>
-    <ul>
-        <li><a href="#home">Úvod</a></li>
-        <li><a href="#about">O nás</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
-    </ul>
-    </div>
-    <div class="idecko">
-</nav>
-    <h1>Logo Barcelony:</h1>
-    <p><img alt="" src="https://icon2.cleanpng.com/lnd/20241224/fy/4aaaed54bf3d7a0b628ed9b58d67b1.webp"> </p>
-    <p><a href="https://www.fcbarcelona.com/en/" target="_blank" rel="noopener noreferrer">Odkaz na hlavní stránky
-            klubu</a></p>
-    <h3>•Počet vyhraných domácích titulů</h3>
-    <p>•27x</p>
-    <h3>•Počet vyhraných Lig mistrů</h3>
-    <p>•5x</p>
-    <h3>•Počet vyhraných Španělských pohárů (Copa del Rey)</h3>
-    <p>•31x</p>
-    <h3>•Počet vyhraných Španělských Superpohárů (Supercopa de España)</h3>
-    <p>•14x</p>
-    <h3>Top 5 nejdražších přestupů</h3>
-    <ul>
-        <li>1)Philippe Coutinho (160 miliónů EUR) </li>
-        <li>2)Ousmane Dembelé (145 miliónů EUR) </li>
-        <li>3)Antoine Griezmann (120 miliónů EUR) </li>
-        <li>4)Neymar JR (88 miliónů EUR) </li>
-        <li>5)Luis Suaréz (82 miliónů EUR) </li>
-    </ul>
-    <h3>•Počet vyhraných Evropských Superpohárů (UEFA Super Cup)</h3>
-    <p>•5x</p>
-    <h3>•Nejlepší střelec v historii klubu</h3>
-    <p>•Lionel Messi (672 golů za 17 let v Barceloně)
-        <a href="https://cs.wikipedia.org/wiki/Lionel_Messi" target="_blank" rel="noopener noreferrer"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg/500px-Lionel_Messi_NE_Revolution_Inter_Miami_7.9.25-055.jpg"
-                alt=""></a>
-    </div>
+    </main>
+    <footer>
+        <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Ověřit CSS!" />
+    </a>
+</p>
+    </footer>
 </body>
 </html>
