Uvod o nas kontakt fully done

--- a/about.html
+++ b/about.html
@@ -18,6 +18,18 @@
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
-    
+    <div class="container">
+        <div class="obsah">
+        <H1>O Nás</H1>
+<ul>
+    <li> <h3>Vytvořil student Obchodní akademie</h3></li>
+    <li><h3>Vojtěch Klapuch</h3></li>
+    <li><h3>Bylo vytvořeno pro ůčel studia</h3></li>
+</ul>
+
+
+        </div>
+     </div>
+ </div>
 </body>
 </html>
