--- a/kontakt.html
+++ b/kontakt.html
@@ -18,5 +18,17 @@
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
+    <div class="container">
+        <div class="obsah">
+        <H1>Kontakt</H1>
+<ul>
+    <li><h3>Telefon: +420 012 345 678</h3></li>
+    <li><h3>E-mai:  fcbarcelona@gmail.com</h3></li>
+</ul>
+
+
+        </div>
+     </div>
+ </div>
 </body>
 </html>
