--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Nás</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
    <Header>
@@ -13,9 +15,9 @@
             FC <span class="text-primary">Barcelona</span>
         </div>
         <ul>
-            <li><a href="index.html">Úvod</a></li>
-            <li><a href="about.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-futbol"></i>Úvod</a></li>
+            <li><a href="about.html"><i class="fa-solid fa-circle-user"></i>O nás</a></li>
+            <li><a href="kontakt.html"><i class="fa-solid fa-square-phone"></i>Kontakt</a></li>
         </ul>
     </nav>
     <div class="container">
