--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             FC <span class="text-primary">Barcelona</span>
         </div>
         <ul>
-            <li><a href="index.html">Úvod</a></li>
-            <li><a href="about.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-futbol"></i>Úvod</a></li>
+            <li><a href="about.html"><i class="fa-solid fa-circle-user"></i>O nás</a></li>
+            <li><a href="kontakt.html"><i class="fa-solid fa-square-phone"></i>Kontakt</a></li>
         </ul>
     </nav>
 </Header>
