Top stránka co říct

--- a/kontakt.html
+++ b/kontakt.html
@@ -32,5 +32,10 @@
         </div>
      </div>
  </div>
+
+ <footer>
+  <p>© 2025 Vojtikkulis10 – fanouškovská stránka FC Barcelona</p>
+</footer>
+
 </body>
 </html>
