--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             alt="Ověřit CSS!" />
     </a>
 </p>
+<p>© 2025 Vojtikkulis10 – fanouškovská stránka FC Barcelona</p>
     </footer>
 </body>
 </html>
