--- a/about.html
+++ b/about.html
@@ -33,5 +33,8 @@
         </div>
      </div>
  </div>
+  <footer>
+  <p>© 2025 Vojtikkulis10 – fanouškovská stránka FC Barcelona</p>
+</footer>
 </body>
 </html>
