--- a/kontakt.html
+++ b/kontakt.html
@@ -18,6 +18,7 @@
             <li><a href="index.html"><i class="fa-solid fa-futbol"></i>Úvod</a></li>
             <li><a href="about.html"><i class="fa-solid fa-circle-user"></i>O nás</a></li>
             <li><a href="kontakt.html"><i class="fa-solid fa-square-phone"></i>Kontakt</a></li>
+            <li><a href="https://store.fcbarcelona.com/?ext=OCM_420&utm_campaign=MenuWebBarca_ORG_BLM_HOME_OCM_webBarca_TXT_WW_EN&utm_medium=Menu&utm_source=WebBarca" target="_blank" rel="noopener noreferrer" ><i class="fa-solid fa-shop"></i>Fanshop</a></li>
         </ul>
     </nav>
     <div class="container">
