github.io na portfolio

--- a/prvni/index.html
+++ b/prvni/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="refresh" content="0; url=/portfolio" />
+    <title>Přesměrování...</title>
     <title>FC Barcelona info</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -10,6 +12,7 @@
 
 <body>
     <!-- 🔹 Navigace -->
+    <p>Pokud nejste automaticky přesměrováni, <a href="/portfolio">klikněte sem</a>.</p>
      <Header>
     <nav id="navbar">
         <div class="logo">
