--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -110,6 +110,20 @@
 
 <footer>
   <p>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fvojtikulis10.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=cs">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Ověřit CSS!" />
+    </a>
+</p>
+<p>
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvojtikulis10.github.io%2F">
+        <img style="border:0;width:88px;height:31px"
+            src="https://www.w3.org/Icons/valid-html401-blue.png"
+            alt="Ověřit CSS!" />
+    </a>
+</p>
+  <p>
     **This is just a fake portfolio. All the projects and contact details given
     are not real.
   </p>
