--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,141 +1,73 @@
-<link rel="stylesheet" href="styles.css">
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-  crossorigin="anonymous"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
-  rel="stylesheet"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
-  rel="stylesheet"
-/>
-<!-- START NAV -->
+<!DOCTYPE html>
 
-<nav id="navbar" class="nav">
-  <ul class="nav-list">
-    <li>
-      <a href="#welcome-section">About</a>
-    </li>
-    <li>
-      <a href="#projects">Work</a>
-    </li>
-    <li>
-      <a href="#contact">Contact</a>
-    </li>
-  </ul>
-</nav>
+<html lang="cs">
 
-<!-- END NAV -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vojta — Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+</head>
 
-<!-- START WELCOME SECTION -->
+<body>
+    <!-- NAV -->
+    <nav id="navbar" class="nav" aria-label="Hlavní navigace">
+        <ul class="nav-list">
+            <li><a href="#welcome-section">About</a></li>
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-<section id="welcome-section" class="welcome-section">
-  <h1>Hey I am Vojta</h1>
-  <p>a web developer</p>
-</section>
+    <!-- MAIN CONTENT -->
+    <main>
+        <section id="welcome-section" class="welcome-section">
+            <h1>Hey I am Vojta</h1>
+            <p>a web developer</p>
+        </section>
 
-<!-- END WELCOME SECTION -->
+        <section id="projects" class="projects-section">
+            <h2 class="projects-section-header">Moje projekty</h2>
+            <div class="projects-grid">
+                <a href="https://vojtikulis10.github.io/prvni/" target="_blank" rel="noopener noreferrer" class="project project-tile">
+                    <img class="project-image" src="https://images.unsplash.com/photo-1660304755794-a4c94ca4cceb?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZmMlMjBiYXJjZWxvbmF8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=600" alt="Náhled projektu - FC Barcelona fanouškovská stránka">
+                    <p class="project-title"><span class="code">&lt;</span> FC Barcelona fanouškovská stránka <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+        </section>
 
-<!-- START PROJECTS SECTION -->
+        <section id="contact" class="contact-section">
+            <div class="contact-section-header">
+                <h2>Let's work together...</h2>
+                <p>How do you take your coffee?</p>
+            </div>
+            <div class="contact-links">
+                <a href="https://facebook.com/freecodecamp" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-facebook-square" aria-hidden="true"></i> <span class="sr-only">Facebook</span></a>
+                <a id="profile-link" href="https://github.com/Vojtikulis10/Vojtikulis10.github.io" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-github" aria-hidden="true"></i> <span class="sr-only">GitHub</span></a>
+                <a href="https://twitter.com/freecodecamp" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-twitter" aria-hidden="true"></i> <span class="sr-only">Twitter</span></a>
+                <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at" aria-hidden="true"></i> <span class="sr-only">Send a mail</span></a>
+                <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt" aria-hidden="true"></i> <span class="sr-only">Call me</span></a>
+            </div>
+        </section>
+    </main>
 
-<section id="projects" class="projects-section">
-  <h2 class="projects-section-header">Moje projekty</h2>
+    <footer>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fvojtikulis10.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=cs">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Ověřit CSS!">
+            </a>
+        </p>
+        <p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvojtikulis10.github.io%2F">
+                <img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-html401-blue.png" alt="Ověřit HTML!">
+            </a>
+        </p>
+        <p>This is just a fake portfolio. All the projects and contact details given are not real.</p>
+        <p>&copy; Created for <a href="https://www.freecodecamp.com/" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
+    </footer>
+</body>
 
-  <div class="projects-grid">
-    <a
-      href="https://vojtikulis10.github.io/prvni/"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://images.unsplash.com/photo-1660304755794-a4c94ca4cceb?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZmMlMjBiYXJjZWxvbmF8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=600"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        FC Barcelona fanouškovská stránka
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-  </div>
-
-</section>
-
-<!-- END PROJECTS SECTION -->
-
-<!-- START CONTACT SECTION -->
-
-<section id="contact" class="contact-section">
-  <div class="contact-section-header">
-    <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
-  </div>
-  <div class="contact-links">
-    <a
-      href="https://facebook.com/freecodecamp"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-facebook-square"></i> Facebook</a
-    >
-    <a
-      id="profile-link"
-      href="https://github.com/Vojtikulis10/Vojtikulis10.github.io"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-github"></i> GitHub</a
-    >
-    <a
-      href="https://twitter.com/freecodecamp"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-twitter"></i> Twitter</a
-    >
-    <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Send a mail</a
-    >
-    <a href="tel:555-555-5555" class="btn contact-details"
-      ><i class="fas fa-mobile-alt"></i> Call me</a
-    >
-  </div>
-</section>
-
-<!-- END CONTACT SECTION -->
-
-<!-- START FOOTER SECTION -->
-
-<footer>
-  <p>
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fvojtikulis10.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=cs">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Ověřit CSS!" />
-    </a>
-</p>
-<p>
-    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvojtikulis10.github.io%2F">
-        <img style="border:0;width:88px;height:31px"
-            src="https://www.w3.org/Icons/valid-html401-blue.png"
-            alt="Ověřit CSS!" />
-    </a>
-</p>
-  <p>
-    **This is just a fake portfolio. All the projects and contact details given
-    are not real.
-  </p>
-  <p>
-    &copy; Created for
-    <a href="https://www.freecodecamp.com/" target="_blank"
-      >freeCodeCamp <i class="fab fa-free-code-camp"></i
-    ></a>
-  </p>
-  <p>
-    <a href="https://personal-portfolio.freecodecamp.rocks/">Source is freecodecamp.rocks</a>
-  </p>
-</footer>
-
-<!-- END FOOTER SECTION -->
+</html>
