--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <html lang="cs">
 
 <head>
@@ -45,11 +46,8 @@
                 <p>How do you take your coffee?</p>
             </div>
             <div class="contact-links">
-                <a href="https://facebook.com/freecodecamp" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-facebook-square" aria-hidden="true"></i> <span class="sr-only">Facebook</span></a>
                 <a id="profile-link" href="https://github.com/Vojtikulis10/Vojtikulis10.github.io" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-github" aria-hidden="true"></i> <span class="sr-only">GitHub</span></a>
-                <a href="https://twitter.com/freecodecamp" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-twitter" aria-hidden="true"></i> <span class="sr-only">Twitter</span></a>
-                <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at" aria-hidden="true"></i> <span class="sr-only">Send a mail</span></a>
-                <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt" aria-hidden="true"></i> <span class="sr-only">Call me</span></a>
+                <a href="https://www.instagram.com/vojtechklapuch09/" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-instagram" aria-hidden="true"></i> <span class="sr-only">instagram</span></a>
             </div>
         </section>
     </main>
