--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -64,7 +64,7 @@
             </a>
         </p>
         <p>This is just a fake portfolio. All the projects and contact details given are not real.</p>
-        <p>&copy; Created for <a href="https://www.freecodecamp.com/" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
+        <p>&copy; Source <a href="https://codepen.io/freeCodeCamp/pen/zNBOYG" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
     </footer>
 </body>
 
