--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,6 +38,12 @@
                     <p class="project-title"><span class="code">&lt;</span> FC Barcelona fanouškovská stránka <span class="code">&#47;&gt;</span></p>
                 </a>
             </div>
+            <div class="projects-grid">
+                <a href="https://vojtikulis10.github.io/gsearch/" target="_blank" rel="noopener noreferrer" class="project project-tile">
+                    <img class="project-image" src="https://89f39022e9.clvaw-cdnwnd.com/925ddf479974215ca7cb4460be7482da/200000390-226c8226ca/FKK_Logo-0.webp?ph=89f39022e9">
+                    <p class="project-title"><span class="code">&lt;</span> FK Kylešovice vyhledávač <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
         </section>
 
         <section id="contact" class="contact-section">
@@ -45,7 +51,7 @@
                 <h2>Let's work together...</h2>
             </div>
             <div class="contact-links">
-                <a id="profile-link" href="https://github.com/Vojtikulis10/Vojtikulis10.github.io" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-github" aria-hidden="true"></i> <span class="sr-only">GitHub</span></a>
+                <a id="profile-link" href="https://github.com/Vojtikulis10" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-github" aria-hidden="true"></i> <span class="sr-only">GitHub</span></a>
                 <a href="https://www.instagram.com/vojtechklapuch09/" target="_blank" rel="noopener noreferrer" class="btn contact-details"><i class="fab fa-instagram" aria-hidden="true"></i> <span class="sr-only">instagram</span></a>
             </div>
         </section>
@@ -63,7 +69,7 @@
             </a>
         </p>
         <p>This is just a fake portfolio. All the projects and contact details given are not real.</p>
-        <p>&copy; Source <a href="https://codepen.io/freeCodeCamp/pen/zNBOYG" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
+        <p>&copy; Source=<a href="https://codepen.io/freeCodeCamp/pen/zNBOYG" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
     </footer>
 </body>
 
