--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,8 +67,8 @@
                 <img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-html401-blue.png" alt="Ověřit HTML!">
             </a>
         </p>
-        <p>This is just a fake portfolio. All the projects and contact details given are not real.</p>
-        <p>&copy; Source=<a href="https://codepen.io/freeCodeCamp/pen/zNBOYG" target="_blank" rel="noopener noreferrer">freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
+        <p>Toto je portfolio studenta na střední škole</p>
+        <p>&copy;<a href="https://codepen.io/freeCodeCamp/pen/zNBOYG" target="_blank" rel="noopener noreferrer">Source=freeCodeCamp <i class="fab fa-free-code-camp" aria-hidden="true"></i></a></p>
     </footer>
 </body>
 
