--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,6 +41,10 @@
                     <img class="project-image" src="https://89f39022e9.clvaw-cdnwnd.com/925ddf479974215ca7cb4460be7482da/200000390-226c8226ca/FKK_Logo-0.webp?ph=89f39022e9">
                     <p class="project-title"><span class="code">&lt;</span> FK Kylešovice vyhledávač <span class="code">&#47;&gt;</span></p>
                 </a>
+                <a href="https://vojtikulis10.github.io/aiweb/" target="_blank" rel="noopener noreferrer" class="project project-tile">
+                    <img class="project-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPpDA-pbsEOYUHElNVBpiv5XG_Va_cpq8eGh6amHapkLP0NMObh5SaSQ6PFLPkWd6k4PNSla3qd1kOZor5cKdsVutjwJHd-a7-ETu05h4&s=10">
+                    <p class="project-title"><span class="code">&lt;</span> AI web o hře Assetto Corsa <span class="code">&#47;&gt;</span></p>
+                </a>
                 
             </div>
         </section>
